--- a/src/components/pages/CardsTable/CardsList.module.css
+++ b/src/components/pages/CardsTable/CardsList.module.css
@@ -8,7 +8,7 @@
     border-radius: 6px;
     box-shadow: 0 5px 15px rgb(0 0 50);
     text-align: center;
-    margin: 40px;
+    margin: 20px auto;
 }
 
 .search {
