--- a/src/components/common/searchField/SearchField.module.css
+++ b/src/components/common/searchField/SearchField.module.css
@@ -1,17 +1,24 @@
-.searchInput {
-    outline: none;
-    border: none;
-    font-size: 16px;
-    border-bottom: 2px solid rgb(159, 194, 210);
-    background-color: rgb(250, 250, 250, 0.15);
-    padding: 5px;
-    width: 850px;
-    height: 38px;
-    margin: 5px;
+.searchWrapper {
+    width: 100%;
 }
 
-@media screen and (max-width: 950px) {
-    .searchInput {
-        width: 100%;
-    }
+.searchInput {
+    border-radius: 5px;
+    border: 1px solid rgb(109, 106, 153, 0.8);
+    outline: none;
+    font-size: 16px;
+    background-color: #ECECF9;
+    color: rgba(0, 0, 0, 0.87);
+    padding: 15px;
+    width: 100%;
+    height: 50px;
+    margin: 10px auto 20px;
+}
+
+.searchInput:focus {
+    border-color: #33b198;
+}
+
+::placeholder {
+    color: rgb(109, 106, 153, 0.8);
 }
