--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@ img {
     width: 100%;
     max-width: 100%;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
