--- a/src/components/pages/Profile/EditProfileInfo/EditProfileInfo.module.css
+++ b/src/components/pages/Profile/EditProfileInfo/EditProfileInfo.module.css
@@ -8,8 +8,8 @@
     ". . ."
     ". editUserInfo ."
     ". . .";
-    justify-items: center;
-  
+  justify-items: center;
+
 }
 
 .editUserInfo {
@@ -61,4 +61,38 @@
 .secondButton {
   display: inline-block;
   margin: 10px;
+}
+
+.changePhoto {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 22px;
+  height: 22px;
+}
+
+.changePhotoLabel {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.0);
+  cursor: pointer;
+}
+
+.changePhotoInput {
+  display: none;
+  visibility: hidden;
+}
+
+.changePhotoIcon {
+  width: 100%;
+}
+
+.changePhotoLabel:hover {
+  transform: scale(1.6);
+}
+
+.containerPhoto {
+  position: relative;
 }
